--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
   </head>
   <body>
-
+       <div class="container-fluid bg-primary py-5">
+	       <divclass="container text-white">
     <!-- Menu -->
 					<nav id="menu">
 						<h2>Contenido</h2>
@@ -24,9 +25,9 @@
 
 						</ul>
 					</nav>
+</div>
 
-
-
+</div>
 
 
 
